// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Component should be able to customize style correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#dddddd",
        "borderRadius": 12.5,
        "marginRight": 5,
        "marginTop": 7,
        "paddingHorizontal": 10,
        "paddingVertical": 2,
      },
      Object {
        "backgroundColor": "#e23478",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 10,
        },
        undefined,
      ]
    }
  >
    Action
  </Text>
</View>
`;

exports[`Badge Component should be able to customize textStyle correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#dddddd",
        "borderRadius": 12.5,
        "marginRight": 5,
        "marginTop": 7,
        "paddingHorizontal": 10,
        "paddingVertical": 2,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 10,
        },
        Object {
          "color": "#e23478",
        },
      ]
    }
  >
    Action
  </Text>
</View>
`;

exports[`Badge Component should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#dddddd",
        "borderRadius": 12.5,
        "marginRight": 5,
        "marginTop": 7,
        "paddingHorizontal": 10,
        "paddingVertical": 2,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 10,
        },
        undefined,
      ]
    }
  >
    Action
  </Text>
</View>
`;
